[project]
name = "python-mc"
version = "0.3.0"
description = ""
authors = [
    {name = "Nature如冰",email = "rubingchupin@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
